# BervinovAcademy

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  restart.bat  web_development_logs.txt
.github/workflows/: ci-cd.yml  deploy.yml
backend/: .env.example  Dockerfile  conftest.py  docker-entrypoint.prod.sh  manage.py  pytest.ini  requirements.txt
backend/common/: drf.py  models.py
backend/communication/: admin.py  chat_conference_events.py  chat_services.py  chat_viewsets.py  consumers.py  livekit_tokens.py  models.py  routing.py  serializers.py  services.py  tasks.py  urls.py  viewsets.py  whiteboard_tokens.py  ws_auth.py
backend/communication/migrations/: 0001_initial.py  0002_conference_presence_fields.py  0003_conference_whiteboard.py  0004_chat_models.py  0005_chatmessage_conference_system.py  0006_directthread_read_state.py  0007_alter_chatmessage_public_id_and_more.py
backend/communication/tests/: conftest.py  test_chat_api.py  test_chat_ws.py  test_conference_api.py  test_whiteboard_api.py
backend/content/: admin.py  apps.py  challenge_stats.py  container_lessons.py  editor_registry.py  editor_serializers.py  editor_views.py  lesson_parent.py  lesson_querysets.py  models.py  module_lessons.py  serializers.py  solution_access.py  urls.py  video_utils.py  viewsets.py
backend/content/migrations/: 0001_initial.py  0002_alter_course_options_alter_lessontheory_options_and_more.py  0003_lessonradioquestion_lessoncheckboxquestion_and_more.py  0004_alter_answeroption_options_and_more.py  0004_codetask_codetasktestcase.py  0005_rename_answeroption_radioansweroption.py  0006_codingchallenge_testcase_and_more.py  0007_alter_codingchallenge_unique_together_and_more.py  0008_codingchallenge_slug.py  0009_uuid_public_ids.py  0010_remove_codingchallenge_slug.py  0011_module_lesson_shared_order.py  0012_lesson_video_fields.py  0013_exam_system.py  0014_course_mentor.py  0015_lesson_comment_solution_fields.py  0016_alter_codingchallenge_comment_and_more.py  0017_alter_course_ordering.py
backend/content/tests/: conftest.py  test_challenge_stats_api.py  test_code_tasks.py  test_content.py  test_course_api.py  test_exam_lesson_api.py  test_models.py  test_smoke.py  test_video_utils.py
backend/education/: admin.py  models.py  serializers.py  services.py  urls.py  viewsets.py
backend/education/migrations/: 0001_initial.py  0002_rename_education_en_user_id_8a1f2d_idx_education_e_user_id_c55f32_idx_and_more.py
backend/education/tests/: test_enrollment.py
backend/exams/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/exams/migrations/: 0001_exam_system.py
backend/exams/tests/: test_exam_api.py
backend/fixture/: course_fixtures.py
backend/mentoring/: permissions.py  services.py  urls.py  views.py
backend/mentoring/tests/: test_content_editor_api.py  test_mentor_api.py
backend/progress/: achievements.py  admin.py  apps.py  kafka_payloads.py  kafka_publisher.py  kafka_results_consumer.py  lesson_comments.py  models.py  profile_serializers.py  serializers.py  signals.py  stats.py  urls.py  views.py  viewsets.py
backend/progress/migrations/: 0001_initial.py  0002_codesubmission_and_more.py  0004_alter_codesubmission_public_id.py  (+9 more)
backend/school_platform/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/translations/: admin.py  apps.py  mixins.py  models.py  services.py  tasks.py
backend/users/: API_DOCS.md  admin.py  apps.py  models.py  password_reset.py  serializers.py  signals.py  tasks.py  tests.py  translation.py  urls.py  validators.py  viewsets.py
docs/: README.md
frontend/: .env.example  .eslintrc.json  Dockerfile  Dockerfile.prod  README.md  build-dist.mjs  index.html  inject-base-path.mjs  package-lock.json  package.json  vite.config.js  whiteboard.bundle.css  whiteboard.bundle.css.map
frontend/src/: App.jsx  app.jsx  auth.jsx  call.jsx  catalog.jsx  chat.jsx  conferences.jsx  content-editor.jsx  course.jsx  exam.jsx  index.css  landing.jsx  learn.jsx  mentor.jsx  problem.jsx  profile-edit.jsx  profile.jsx  shared.jsx
frontend/whiteboard/: build.mjs  package-lock.json  package.json
infra/: nginx-gateway.conf  setup-https.sh
infra/server/: docker-compose.yml  full-restart.sh  restart.sh
logs/: backend_logs.txt  celery_logs.txt  db_logs.txt  redis_logs.txt
new/: index.html
new/src/: app.jsx  auth.jsx  catalog.jsx  landing.jsx  problem.jsx  profile.jsx  shared.jsx
nginx/: Dockerfile  Dockerfile.prod  nginx.conf  nginx.prod.conf
scripts/: README.md  dsdd.py  fast-commit.bat  fast-commit.sh  full-restart-docker.bat  full-restart-docker.sh  generate-prompt.bat  generate-prompt.py  generate-prompt.sh  project_prompt.txt  restart-docker.bat  restart-docker.sh
services/code_check_emulator/: Dockerfile  requirements.txt
services/code_check_sandbox/: Dockerfile  judge.py
services/tldraw-sync/: Dockerfile  assets.mjs  auth.mjs  package-lock.json  package.json  rooms.mjs  server.mjs
(+63 files in other folders)
