[project]
name = "bervinov-academy"
version = "0.1.0"
description = "Online education platform"
requires-python = ">=3.11"

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | migrations
  | .venv
  | .git
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
known_first_party = [
  "backend", "users", "education", "subscriptions",
  "progress", "mentoring", "content", "communication",
  "translations"
]
force_single_line = false
force_sort_within_sections = true

[tool.flake8]
max-line-length = 79
ignore = "E203, W503, E501, C901"
exclude = ".git,__pycache__,build,dist,.venv,venv,migrations,alembic"
filename = "*.py"
per-file-ignores = [
  "__init__.py:F401",
  "tests/*:S101"
]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

# Игнорировать определенные ошибки
[[tool.mypy.overrides]]
module = "backend.translations.mixins"
ignore_errors = true

# Секция для pytest
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "school_platform.settings"
python_files = ["test_*.py", "*_tests.py", "tests.py"]
pythonpath = ["backend"]
django_find_project = true
addopts = [
    "--reuse-db",
    "--nomigrations",
    "--strict-markers",
    "-v",
]
testpaths = [
    "backend",
    "backend/users/tests",
    "backend/content/tests",
    "backend/education/tests",
    "backend/progress/tests",
    "backend/mentoring/tests",
    "backend/communication/tests",
    "backend/translations/tests",
]

markers = [
    "fast: быстрые тесты (юниты)",
    "slow: медленные тесты (интеграционные)",
    "smoke: критический минимум",
    
    "unit: модульные тесты",
    "integration: тесты с зависимостями",
    
    "models: тестирование моделей",
    "api: тестирование API",
    "services: тестирование бизнес-логики",
    "tasks: тестирование задач",
    "translation: тесты с переводами"
]

filterwarnings = [
    "ignore::DeprecationWarning:httpx._models:",
]
